--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
   "homepage": "https://github.com/hpstream/node_all#readme",
   "dependencies": {
     "cheerio": "^1.0.0-rc.1",
+    "express": "^4.16.2",
     "jquery": "^3.2.1",
-    "request": "^2.81.0"
+    "request": "^2.81.0",
+    "socket.io": "^2.0.4"
   },
   "devDependencies": {
     "html-entities": "^1.2.1",
