--- a/package.json
+++ b/package.json
@@ -18,10 +18,11 @@
   },
   "homepage": "https://github.com/hpstream/node_all#readme",
   "dependencies": {
-    "express": "^4.16.2",
+    "express": "^4.16.3",
     "jquery": "^3.2.1",
     "request": "^2.81.0",
-    "socket.io": "^2.0.4"
+    "socket.io": "^2.0.4",
+    "tree": "^0.1.3"
   },
   "devDependencies": {
     "cheerio": "^1.0.0-rc.2",
