--- a/package.json
+++ b/package.json
@@ -25,6 +25,10 @@
     "tree": "^0.1.3"
   },
   "devDependencies": {
+    "@babel/generator": "^7.6.0",
+    "@babel/parser": "^7.5.5",
+    "@babel/traverse": "^7.6.0",
+    "@babel/types": "^7.6.1",
     "cheerio": "^1.0.0-rc.2",
     "html-entities": "^1.2.1",
     "open": "0.0.5",
